2016-06-24 Fix phone number breaking over 2 lines on small screens

--- a/catalog/view/theme/theme532/stylesheet/stylesheet-mods.css
+++ b/catalog/view/theme/theme532/stylesheet/stylesheet-mods.css
@@ -167,7 +167,7 @@ a.button-prod {
   right: 0;
   position: fixed;
   top: 0;
-  width: 60%;
+  width: 80%;
   color: #fff;
   height: 50px;
   line-height: 50px;
